--- a/SpriteLib3.0-v2.0/SpriteLib3.0-v2.0.vcxproj
+++ b/SpriteLib3.0-v2.0/SpriteLib3.0-v2.0.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="GrainEffect.h" />
     <ClInclude Include="GreyscaleEffect.h" />
+    <ClInclude Include="PuzzleTwo.h" />
     <ClInclude Include="HorizontalScroll.h" />
     <ClInclude Include="include\imgui\imconfig.h" />
     <ClInclude Include="include\imgui\imgui.h" />
@@ -232,6 +233,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PostEffect.cpp" />
     <ClCompile Include="PuzzleOne.cpp" />
+    <ClCompile Include="PuzzleTwo.cpp" />
     <ClCompile Include="RenderingSystem.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Selectable.cpp" />
