--- a/SpriteLib3.0-v2.0/SpriteLib3.0-v2.0.vcxproj.filters
+++ b/SpriteLib3.0-v2.0/SpriteLib3.0-v2.0.vcxproj.filters
@@ -192,6 +192,9 @@
     <ClInclude Include="PuzzleOne.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PuzzleTwo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="include\imgui\imgui.cpp">
@@ -363,6 +366,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PuzzleOne.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PuzzleTwo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
