--- a/SpriteLib3.0-v2.0/SpriteLib3.0-v2.0.vcxproj
+++ b/SpriteLib3.0-v2.0/SpriteLib3.0-v2.0.vcxproj
@@ -153,7 +153,6 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="GrainEffect.h" />
     <ClInclude Include="GreyscaleEffect.h" />
-    <ClInclude Include="PuzzleTwo.h" />
     <ClInclude Include="HorizontalScroll.h" />
     <ClInclude Include="include\imgui\imconfig.h" />
     <ClInclude Include="include\imgui\imgui.h" />
@@ -175,6 +174,7 @@
     <ClInclude Include="PostEffect.h" />
     <ClInclude Include="PuzzleOne.h" />
     <ClInclude Include="RenderingSystem.h" />
+    <ClInclude Include="ScalingSpriteTrigger.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Scenes.h" />
     <ClInclude Include="Selectable.h" />
@@ -233,8 +233,8 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PostEffect.cpp" />
     <ClCompile Include="PuzzleOne.cpp" />
-    <ClCompile Include="PuzzleTwo.cpp" />
     <ClCompile Include="RenderingSystem.cpp" />
+    <ClCompile Include="ScalingSpriteTrigger.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Selectable.cpp" />
     <ClCompile Include="SelectiveColorEffect.cpp" />
